test/ddc-spec/error/01-ErrorExp/54-ProjectNoField/Main.ds

module Main where

main ()
 = [x = 5].y
